# compression_benchmark_rs

./: Cargo.toml  README.md  benchmark_results.json  justfile
results/: dataset_statistics.md  decompression_speed.md  integer_compression.md  tokenizer_entropy.md
src/: lib.rs
src/benchmark/: mod.rs
src/benchmark_utils/: mod.rs
src/bit_vector/: mod.rs
src/compressor/: bpe.rs  bpe1.rs  bpe2.rs  bpe3.rs  bpe4.rs  bpe_lpm.rs  copy.rs  fsst.rs  lz4.rs  mod.rs  onpair.rs  onpair16.rs  onpair_bv.rs  raw.rs  sampled_bpe.rs  sampled_bpe16.rs  snappy.rs  zstd.rs
src/compressor/alternatives/: bpe4.rs  onpair_fixed_bitvector.rs  onpair_fixed_vec.rs  onpair_unlimited.rs  onpair_unlimited_bitvector.rs  onpair_unlimited_vec.rs
src/dataset/: mod.rs
src/entropy_encoding/: mod.rs
src/longest_prefix_matcher/: lpm.rs  lpm16.rs  mod.rs
src/paper/: compressibility_estimate.rs  dataset_statistics.rs
src/repair/: mod.rs
src/sampling/: mod.rs
src/threshold/: mod.rs
src/tokenizer/: mod.rs
src/vbe_simd/: mod.rs
