[package]
name = "compression_benchmark_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
debug = true
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.28.0"
prettytable = "0.10"
rustc-hash = "2.0.0"
rand = "0.8.5"
fsst-rs = { git = "https://github.com/gargiulofrancesco/fsst", branch = "develop" }