[package]
name = "compression_benchmark_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
debug = true
opt-level = 3

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
lz4 = "1.28.0"
snap = "1.1.1"
zstd = "0.13.2"
flate2 = "1.0.35"
xz2 = "0.1.7"
brotli = "3.3.0"
prettytable = "0.10"
rustc-hash = "2.0.0"
rand = "0.8.5"
ptr_hash  = { git = "https://github.com/RagnarGrootKoerkamp/ptrhash", rev = "ba43481" }
cacheline-ef = { git = "https://github.com/RagnarGrootKoerkamp/cacheline-ef" }